--- a/head.html
+++ b/head.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -5,7 +6,7 @@
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>{{ title }}</title>
+    <title></title>
 
     <link rel="apple-touch-icon" href="/assets/images/apple-icon-touch.png">
     <!-- Missing?
