Update build instructions

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="band  band--header  band--has-icon">
+        <div class="band band--header band--has-icon">
         <div class="wrapper">
             <p class="band__headline">An organisation dedicated to create and maintain a truly <strong>global Open Source Database for product footprinting</strong><img src="https://bonsamurais.github.io/bonsai.uno/assets/images/bonsai-icon-1395311038.svg" class="band__icon"></p>
             <p class="band__button">
@@ -148,7 +148,6 @@
                 <p class="page-foot__text">&copy; 2019 BONSAI</p>
                 <ul class="page-foot__list">
                     <li class="social"><a href="https://www.facebook.com/pages/BONSAI-data/352709828238585"><i class="icon-facebook-squared"></i></a></li>
-                    <li class="social"><a href="https://www.linkedin.com/groups/6808595/"><i class="icon-linkedin-squared"></i></a></li>
                     <li><a href="/contribute/">Contribute</a></li>
                     <li><a href="&#109;a&#105;l&#116;o&#x3a;i&#x6e;f&#x6f;&#64;&#x62;o&#x6e;s&#x61;i&#x2e;u&#x6e;o">Contact us</a></li>
                     <li class="payment"><a href="/contribute/payment/">Payment&nbsp;information</a></li>
@@ -157,7 +156,7 @@
         </div>
     </footer>
 
-    <script type='text/javascript' src='/assets/js/scripts.js'></script>
+    <script type='text/javascript' src='https://bonsamurais.github.io/bonsai.uno/assets/js/scripts.js'></script>
     <!--
         <script type='text/javascript' src='https://bonsai.uno/wp-includes/js/wp-embed.min.js'></script>
     -->
